Revert: Upgrade plugins/dependencies